Have added redis

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Db": "Data Source=database.db" 
+    "Db": "Data Source=database.db",
+    "Redis": "localhost:6379,ssl=False,abortConnect=False"
   }
 }
